# TorchCS-Properties

./: CMakeLists.txt  readme.md
.github/workflows/: ci.yml
include/torchcs_properties/: properties.hpp
sample/: CMakeLists.txt
sample/src/: main.cpp
src/: properties.cpp
tests/your_project/: CMakeLists.txt
tests/your_project/src/: main.cpp
